# django-htmx-complete

./: .gitignore  main.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
static/css/: custom.css
templates/accounts/: profile.html
templates/base/: base.html
templates/core/: contact.html  contact_list.html  home.html
templates/partials/: contact_form.html  contact_success.html  login_form.html  newsletter_success.html  newsletter_warning.html  password_strength.html  profile_form.html  profile_success.html  register_form.html  validation_error.html  validation_success.html  validation_warning.html
templates/registration/: login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  register.html
